--- a/src/w2/assignment/advance/index.html
+++ b/src/w2/assignment/advance/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W2 Sketch1</title>
+    <title>홍길동 W1 Advance</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -11,29 +11,27 @@
     <link rel="stylesheet" href="../../../../style/style.css" />
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
-    <script>
-      alert('안녕하세요 세진입니다.');
-      prompt('배고프신가요?');
-      let userInputFromPrompt;
-      userInputFromPrompt = prompt('먹고 싶은 음식은?', '떡볶이');
-      confirm('저도 배고파요');
-      confirm('너가 먹고 싶은 것은 ' + userInputFromPrompt + '이구나');
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.js"></script>
+    <script src="./script/sketch.js" defer></script>
+    <script src="../../../../script/p5Util.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <main>
         <section>
-          <div class="container"></div>
+          <div class="container">
+            <div id="anyname"></div>
+          </div>
         </section>
       </main>
       <footer>
         <section>
           <div class="container">
-            <h6>index.html</h6>
+            <h6>sketch.js</h6>
             <pre
               class="line-numbers"
-              data-src="./index.html"
+              data-src="./script/sketch.js"
+              data-line="3-8"
               data-download-link></pre>
           </div>
         </section>
