--- a/src/w2/sketches/sketch2/index.html
+++ b/src/w2/sketches/sketch2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W2 Sketch1</title>
+    <title>고세진 W2 Sketch2</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -11,14 +11,7 @@
     <link rel="stylesheet" href="../../../../style/style.css" />
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
-    <script>
-      alert('안녕하세요 세진입니다.');
-      prompt('배고프신가요?');
-      let userInputFromPrompt;
-      userInputFromPrompt = prompt('먹고 싶은 음식은?', '떡볶이');
-      confirm('저도 배고파요');
-      confirm('너가 먹고 싶은 것은 ' + userInputFromPrompt + '이구나');
-    </script>
+    <script src="./script/alertPromptConfirm.js"></script>
   </head>
   <body>
     <div class="viewport">
@@ -34,6 +27,11 @@
             <pre
               class="line-numbers"
               data-src="./index.html"
+              data-download-link></pre>
+            <h6>alertPromptConfirm.js</h6>
+            <pre
+              class="line-numbers"
+              data-src="./script/alertPromptConfirm.js"
               data-download-link></pre>
           </div>
         </section>
