--- a/src/w2/sketches/sketch3/index.html
+++ b/src/w2/sketches/sketch3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W2 Sketch1</title>
+    <title>고세진 W2 Sketch3</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -11,33 +11,35 @@
     <link rel="stylesheet" href="../../../../style/style.css" />
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
-    <script>
-      alert('안녕하세요 세진입니다.');
-      prompt('배고프신가요?');
-      let userInputFromPrompt;
-      userInputFromPrompt = prompt('먹고 싶은 음식은?', '떡볶이');
-      confirm('저도 배고파요');
-      confirm('너가 먹고 싶은 것은 ' + userInputFromPrompt + '이구나');
-    </script>
+    <!-- <script>
+      let userName = prompt('너의 이름은?', '고세진');
+      document.getElementById('html-id').textContent =
+        '환영합니다. ' + userName + '님';
+    </script> -->
   </head>
   <body>
     <div class="viewport">
       <main>
         <section>
           <div class="container"></div>
+          <h2 id="html-id"></h2>
+          <h6>index.html</h6>
+          <pre
+            class="line-numbers"
+            data-src="./index.html"
+            data-download-link></pre>
         </section>
       </main>
       <footer>
         <section>
-          <div class="container">
-            <h6>index.html</h6>
-            <pre
-              class="line-numbers"
-              data-src="./index.html"
-              data-download-link></pre>
-          </div>
+          <div class="container"></div>
         </section>
       </footer>
     </div>
+    <script>
+      let userName = prompt('너의 이름은?', '고세진');
+      document.getElementById('html-id').textContent =
+        '환영합니다. ' + userName + '님';
+    </script>
   </body>
 </html>
