--- a/src/w2/sketches/sketch7/index.html
+++ b/src/w2/sketches/sketch7/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W2 기본</title>
+    <title>고세진 W2 Sketch7</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -12,37 +12,29 @@
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
-    <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/basicDrawing.js" defer></script>
+    <script src="./script/sketch.js" defer></script>
   </head>
   <body>
     <div class="viewport">
-      <header>
-        <section>
-          <div class="container">
-            <h1>고세진 w2 기본</h1>
-          </div>
-        </section>
-      </header>
       <main>
         <section>
-          <div class="container">
-            <div id="p5-canvas"></div>
-          </div>
+          <div class="container"></div>
+          <h1>고세진 w2 Sketch7</h1>
         </section>
       </main>
       <footer>
         <section>
           <div class="container">
-            <h6>HTML</h6>
+            <div id="canvas-goes-here"></div>
+            <h6>index.html</h6>
             <pre
               class="line-numbers"
               data-src="./index.html"
               data-download-link></pre>
-            <h6>basicDrawing.js</h6>
+            <h6>sketch.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/basicDrawing.js"
+              data-src="./index.html"
               data-download-link></pre>
           </div>
         </section>
