--- a/src/w3/index.html
+++ b/src/w3/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 Week2</title>
-    <linkw2
-      copy
+    <title>고세진 Week3</title>
+    <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
       type="text/css" />
@@ -16,7 +15,7 @@
       <header>
         <section>
           <div class="container">
-            <h1>고세진 Week2</h1>
+            <h1>고세진 Week3</h1>
           </div>
         </section>
       </header>
@@ -30,33 +29,6 @@
               </li>
               <li>
                 <a href="./sketches/sketch2/index.html">스케치2</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch3/index.html">스케치3</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch4/index.html">스케치4</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch5/index.html">스케치5</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch6/index.html">스케치6</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch7/index.html">스케치7</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch8/index.html">스케치8</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch9/index.html">스케치9</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch10/index.html">스케치10</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch11/index.html">스케치11</a>
               </li>
             </ul>
           </div>
