--- a/src/w3/index.html
+++ b/src/w3/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       type="text/css" />
     <link rel="stylesheet" href="../../style/style.css" />
+    <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
+    <script src="../../../../plugin/prism/prism.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
+    <script src="../../script/p5Util.js" defer></script>
   </head>
   <body>
     <div class="viewport">
@@ -30,6 +34,45 @@
               <li>
                 <a href="./sketches/sketch2/index.html">스케치2</a>
               </li>
+              <li>
+                <a href="./sketches/sketch3/index.html">스케치3</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch4/index.html">스케치4</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch5/index.html">스케치5</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch6/index.html">스케치6</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch7/index.html">스케치7</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch8/index.html">스케치8</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch9/index.html">스케치9</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch10/index.html">스케치10</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch11/index.html">스케치11</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch12/index.html">스케치12</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch13/index.html">스케치13</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch14/index.html">스케치14</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch15/index.html">스케치15</a>
+              </li>
             </ul>
           </div>
         </section>
@@ -38,7 +81,7 @@
             <h3>과제</h3>
             <ul>
               <li>
-                <a href="./assignment/basic/index.html">기본</a>
+                <a href="./assignment/step1/index.html">step1</a>
               </li>
               <li>
                 <a href="./assignment/advance/index.html">심화</a>
