--- a/src/w6/index.html
+++ b/src/w6/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 Week4</title>
+    <title>고세진 Week6</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <header>
         <section>
           <div class="container">
-            <h1>고세진 Week4</h1>
+            <h1>고세진 Week6</h1>
           </div>
         </section>
       </header>
@@ -32,13 +32,7 @@
                 <a href="./sketches/sketch1/index.html">step1</a>
               </li>
               <li>
-                <a href="./sketches/sketch1_1/index.html">step1_1</a>
-              </li>
-              <li>
                 <a href="./sketches/sketch2/index.html">step2</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch2_2/index.html">step2_2</a>
               </li>
               <li>
                 <a href="./sketches/sketch3/index.html">step3</a>
@@ -58,6 +52,9 @@
             <ul>
               <li>
                 <a href="./assignment/step1/index.html">step1</a>
+              </li>
+              <li>
+                <a href="./assignment/advance/index.html">심화</a>
               </li>
             </ul>
           </div>
