--- a/src/w4/assignment/step1/index.html
+++ b/src/w4/assignment/step1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W3 step1</title>
+    <title>고세진 W4 step1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -13,14 +13,15 @@
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/step1Drawing.js" defer></script>
+    <script src="./script/nBodiesAttraction.js" defer></script>
+    <script src="./script/Body.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <header>
         <section>
           <div class="container">
-            <h1>고세진 w3 step1</h1>
+            <h1>고세진 w4 step1</h1>
           </div>
         </section>
       </header>
@@ -34,15 +35,16 @@
       <footer>
         <section>
           <div class="container">
-            <h6>HTML</h6>
+            <h6>nBodiesAttraction.js</h6>
             <pre
               class="line-numbers"
-              data-src="./index.html"
+              data-src="./script/nBodiesAttraction.js"
               data-download-link></pre>
-            <h6>step1Drawing.js</h6>
+          <div class="container">
+            <h6>Body.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/step1Drawing.js"
+              data-src="./script/Body.js"
               data-download-link></pre>
           </div>
         </section>
