--- a/src/w4/sketches/sketch10/index.html
+++ b/src/w4/sketches/sketch10/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W4 step1</title>
+    <title>고세진 W4 step10</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -13,15 +13,16 @@
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/sketch.js" defer></script>
-    <script src="./script/Mover.js" defer></script>
+    <!-- <script src="./script/sketch.js" defer></script> -->
+    <script src="./script/nBodiesAttraction.js" defer></script>
+    <script src="./script/Body.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <header>
         <section>
           <div class="container">
-            <h1>step1</h1>
+            <h1>step10</h1>
           </div>
         </section>
       </header>
@@ -35,17 +36,24 @@
       <footer>
         <section>
           <div class="container">
-            <h6>step.js</h6>
+            <h6>sketch.js</h6>
             <pre
               class="line-numbers"
               data-src="./script/sketch.js"
               data-download-link></pre>
           </div>
           <div class="container">
-            <h6>Mover.js</h6>
+            <h6>nBodiesAttraction.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/Mover.js"
+              data-src="./nBodiesAttraction.js"
+              data-download-link></pre>
+          </div>
+          <div class="container">
+            <h6>Body.js</h6>
+            <pre
+              class="line-numbers"
+              data-src="./Body.js"
               data-download-link></pre>
           </div>
         </section>
