--- a/src/w4/sketches/sketch2/index.html
+++ b/src/w4/sketches/sketch2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W4 step1</title>
+    <title>고세진 W4 step2</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -15,13 +15,14 @@
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
     <script src="./script/Mover.js" defer></script>
+    <script src="./script/attractor.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <header>
         <section>
           <div class="container">
-            <h1>step1</h1>
+            <h1>step2</h1>
           </div>
         </section>
       </header>
