--- a/src/w4/sketches/sketch3/index.html
+++ b/src/w4/sketches/sketch3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W4 step1</title>
+    <title>고세진 W4 step3</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -14,14 +14,14 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
-    <script src="./script/Mover.js" defer></script>
+    <script src="./script/MoverWithMass.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <header>
         <section>
           <div class="container">
-            <h1>step1</h1>
+            <h1>step3</h1>
           </div>
         </section>
       </header>
@@ -42,10 +42,10 @@
               data-download-link></pre>
           </div>
           <div class="container">
-            <h6>Mover.js</h6>
+            <h6>MoverWithMass.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/Mover.js"
+              data-src="./script/MoverWithMAss.js"
               data-download-link></pre>
           </div>
         </section>
