--- a/src/w5/index.html
+++ b/src/w5/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 Week4</title>
+    <title>고세진 Week5</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <header>
         <section>
           <div class="container">
-            <h1>고세진 Week4</h1>
+            <h1>고세진 Week5</h1>
           </div>
         </section>
       </header>
@@ -32,13 +32,7 @@
                 <a href="./sketches/sketch1/index.html">step1</a>
               </li>
               <li>
-                <a href="./sketches/sketch1_1/index.html">step1_1</a>
-              </li>
-              <li>
                 <a href="./sketches/sketch2/index.html">step2</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch2_2/index.html">step2_2</a>
               </li>
               <li>
                 <a href="./sketches/sketch3/index.html">step3</a>
@@ -49,6 +43,36 @@
               <li>
                 <a href="./sketches/sketch5/index.html">step5</a>
               </li>
+              <li>
+                <a href="./sketches/sketch6/index.html">step6</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch7/index.html">step7</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch8/index.html">step8</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch9/index.html">step9</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch10/index.html">step10</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch11/index.html">step11</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch12/index.html">step12</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch13/index.html">step13</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch14/index.html">step14</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch15/index.html">step15</a>
+              </li>
             </ul>
           </div>
         </section>
@@ -58,6 +82,9 @@
             <ul>
               <li>
                 <a href="./assignment/step1/index.html">step1</a>
+              </li>
+              <li>
+                <a href="./assignment/advance/index.html">심화</a>
               </li>
             </ul>
           </div>
