--- a/src/w7/assignment/advance/index.html
+++ b/src/w7/assignment/advance/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W6 수업중 step1</title>
+    <title>홍길동 W1 Advance</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -11,24 +11,16 @@
     <link rel="stylesheet" href="../../../../style/style.css" />
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
-    <script src="../../../../script/p5Util.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.js"></script>
     <script src="./script/sketch.js" defer></script>
-    <script src="./script/Particle.js" defer></script>
+    <script src="../../../../script/p5Util.js" defer></script>
   </head>
   <body>
     <div class="viewport">
-      <header>
-        <section>
-          <div class="container">
-            <h1>수업중 step1</h1>
-          </div>
-        </section>
-      </header>
       <main>
         <section>
           <div class="container">
-            <div id="p5-canvas"></div>
+            <div id="anyname"></div>
           </div>
         </section>
       </main>
@@ -39,13 +31,7 @@
             <pre
               class="line-numbers"
               data-src="./script/sketch.js"
-              data-download-link></pre>
-          </div>
-          <div class="container">
-            <h6>Particle.js</h6>
-            <pre
-              class="line-numbers"
-              data-src="./script/Particle.js"
+              data-line="3-8"
               data-download-link></pre>
           </div>
         </section>
