--- a/src/w7/sketches/sketch1/index.html
+++ b/src/w7/sketches/sketch1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W6 수업중 step1</title>
+    <title>고세진 W7 step1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -14,7 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
-    <script src="./script/Particle.js" defer></script>
+    <script src="./script/Vehicle.js" defer></script>
+    <script src="./script/seekingTarget.js" defer></script>
   </head>
   <body>
     <div class="viewport">
