--- a/src/w8/index.html
+++ b/src/w8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 Week7</title>
+    <title>고세진 Week8</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <header>
         <section>
           <div class="container">
-            <h1>고세진 Week7</h1>
+            <h1>고세진 Week8</h1>
           </div>
         </section>
       </header>
@@ -51,13 +51,10 @@
             <h3>과제</h3>
             <ul>
               <li>
-                <a href="./assignment/basic/index.html">step1</a>
+                <a href="./assignment/step1/index.html">step1</a>
               </li>
               <li>
-                <a
-                  href="https://docs.google.com/document/d/1vBIYWWv8PG7IAtOKSC_oZ2xpcqvpvYiF5bQnqBWdHtI/edit">
-                  심화
-                </a>
+                <a href="./assignment/advance/index.html">심화</a>
               </li>
             </ul>
           </div>
