--- a/src/w7/assignment/advance/index.html
+++ b/src/w7/assignment/advance/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>홍길동 W1 Advance</title>
+    <title>고세진 W7 step2</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -11,29 +11,28 @@
     <link rel="stylesheet" href="../../../../style/style.css" />
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.js"></script>
-    <script src="./script/sketch.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
   </head>
   <body>
     <div class="viewport">
+      <header>
+        <section>
+          <div class="container">
+            <h1>고세진 w7 step2</h1>
+          </div>
+        </section>
+      </header>
       <main>
         <section>
           <div class="container">
-            <div id="anyname"></div>
+            <div id="p5-canvas"></div>
           </div>
         </section>
       </main>
       <footer>
         <section>
-          <div class="container">
-            <h6>sketch.js</h6>
-            <pre
-              class="line-numbers"
-              data-src="./script/sketch.js"
-              data-line="3-8"
-              data-download-link></pre>
-          </div>
+          <div class="container"></div>
         </section>
       </footer>
     </div>
