--- a/src/w8/assignment/basic/index.html
+++ b/src/w8/assignment/basic/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W7 step1</title>
+    <title>고세진 W2 기본</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -13,16 +13,14 @@
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/sketch.js" defer></script>
-    <script src="./script/Vehicle.js" defer></script>
-    <script src="./script/Traffic.js" defer></script>
+    <script src="./script/basicDrawing.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <header>
         <section>
           <div class="container">
-            <h1>고세진 w7 step1</h1>
+            <h1>고세진 w2 기본</h1>
           </div>
         </section>
       </header>
@@ -36,20 +34,15 @@
       <footer>
         <section>
           <div class="container">
-            <h6>sketch.js</h6>
+            <h6>HTML</h6>
             <pre
               class="line-numbers"
-              data-src="./script/sketch.js"
+              data-src="./index.html"
               data-download-link></pre>
-            <h6>Vehicle.js</h6>
+            <h6>basicDrawing.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/Vehicle.js"
-              data-download-link></pre>
-            <h6>Traffic.js</h6>
-            <pre
-              class="line-numbers"
-              data-src="./script/Traffic.js"
+              data-src="./script/basicDrawing.js"
               data-download-link></pre>
           </div>
         </section>
