--- a/src/w8/sketches/sketch4/index.html
+++ b/src/w8/sketches/sketch4/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고세진 W7 step1</title>
+    <title>고세진 W8 step1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -15,14 +15,14 @@
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
     <script src="./script/Vehicle.js" defer></script>
-    <script src="./script/Traffic.js" defer></script>
+    <script src="./script/seekingTarget.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <header>
         <section>
           <div class="container">
-            <h1>고세진 w7 step1</h1>
+            <h1>수업중 step1</h1>
           </div>
         </section>
       </header>
@@ -41,15 +41,12 @@
               class="line-numbers"
               data-src="./script/sketch.js"
               data-download-link></pre>
-            <h6>Vehicle.js</h6>
+          </div>
+          <div class="container">
+            <h6>Particle.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/Vehicle.js"
-              data-download-link></pre>
-            <h6>Traffic.js</h6>
-            <pre
-              class="line-numbers"
-              data-src="./script/Traffic.js"
+              data-src="./script/Particle.js"
               data-download-link></pre>
           </div>
         </section>
