--- a/src/w7/index.html
+++ b/src/w7/index.html
@@ -56,7 +56,7 @@
               <li>
                 <a
                   href="https://docs.google.com/document/d/1vBIYWWv8PG7IAtOKSC_oZ2xpcqvpvYiF5bQnqBWdHtI/edit">
-                  심화
+                  step2
                 </a>
               </li>
             </ul>
